--- a/.jslintrc
+++ b/.jslintrc
@@ -1,66 +1,5 @@
 {
-  /*** Globals ***/
-  // To ignore any custom global variables, enable the `predef` option and list
-  // your variables within it.
-  "predef": [
-    "window",
-    "document",
-    "jQuery",
-    "Backbone",
-    "Marionette",
-    "Modernizr",
-    "_",
-    "setTimeout",
-    "clearTimeout",
-    "setInterval",
-    "clearInterval"
-  ],
-
-  /*** Enforcing options ***/
-  // Set these to `true` to enforce, or `false` to relax.
-  "adsafe": false,
-  "safe": false,
-
-  /*** Relaxing options ***/
-  // Set these to `true` to relax, or `false` to enforce.
-  "bitwise": false,
-  "cap": false,
-  "confusion": false,
-  "continue": true,
-  "css": true,
-  "debug": false,
-  "eqeq": false,
-  "es5": true,
-  "evil": false,
-  "forin": false,
-  "fragment": true,
-  "newcap": false,
-  "nomen": false,
-  "on": false,
-  "plusplus": true,
-  "regexp": true,
-  "sloppy": false,
-  "sub": false,
-  "undef": false,
-  "unparam": false,
-  "vars": false,
-  "white": false,
-  "validthis": true,
-  "strict_mode": false,
-
-  /*** Environments ***/
-  // Set each environment that you're using to `true`.
-  "browser": true,
-  "devel": true,
-  "node": true,
-  "rhino": false,
-  "widget": false,
-  "windows": true,
-  "esversion": 6,
-
-  /*** Miscellaneous ***/
-  "indent": 4,
-  "maxerr": 50,
-  // "maxlen":     80,
-  "passfail": false
+	"indent" : 2,
+	"esversion" : 6,
+	 "asi": true
 }
